[package]
name = "bevy-vulkano-ios"
version = "0.1.0"
authors = ["hakolao <okkohakola@gmail.com>"]
edition = "2018"

[lib]
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "bevy-vulkano-ios-desktop"
path = "gen/bin/desktop.rs"

[dependencies]
mobile-entry-point = "0.1.0"
vulkano = { git = "https://github.com/hakolao/vulkano", branch = "ios-fix" }
vulkano-shaders = { git = "https://github.com/hakolao/vulkano", branch = "ios-fix" }
vulkano-util = { git = "https://github.com/hakolao/vulkano", branch = "ios-fix" }
vulkano-win = { git = "https://github.com/hakolao/vulkano", branch = "ios-fix" }
winit = "0.27.1"
bytemuck = "1.7"
